# MNIST_ANN

./: CMakeLists.txt  readme.md
include/: MNIST_database.h  MNIST_image.h  MNIST_neuralNetwork.h  Sample.h  Utils.h  libs.h
src/: CMakeLists.txt  MNIST_database.cpp  MNIST_image.cpp  MNIST_neuralNetwork.cpp  Utils.cpp  test.cpp
